--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
     "files.associations": {
-        "arff.h": "c",
-        "string.h": "c",
-        "ctype.h": "c"
+        "sstream": "c"
     }
 }
